# typeahead-api

./: .gitignore  Cargo.toml  Dockerfile  PerformanceTests.jmx  PerformanceTestsDataSet.txt  README.md  log4rs.yml
src/: app_error.rs  config.rs  handlers.rs  main.rs  trie.rs
