[package]
name = "type-ahead-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.8"
log4rs = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-rt = "1.1.1" # needed?

[dev-dependencies]
pretty_assertions = { version= "1.2.1", default-features = false, features = ["alloc"] }