[package]
name = "type-ahead-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1" # needed?
actix-web = "3.3"
config = "0.11"
derive_more = "0.99"
log = "0.4.8"
log4rs = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[dev-dependencies]
pretty_assertions = { version= "1.2.1", default-features = false, features = ["alloc"] }